--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@icon-park/vue-next": "^1.3.5",
     "ant-design-vue": "^2.2.1",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
